# mini-ocr

./: .dockerignore  .env.cpu.example  .env.example  .env.gpu.example  .gitignore  DOCKER.md  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  README.md  docker-compose.cpu.yml  docker-compose.gpu.yml  docker-compose.ollama-port.yml  docker-compose.ollama.yml  docker-compose.yml  pyproject.toml
src/mini_ocr/: cli.py  main.py
src/mini_ocr/api/: documents.py
src/mini_ocr/core/: config.py  db.py  schema.py
src/mini_ocr/models/: __init__.py  document.py  extracted_item.py  extraction_job.py  item_validation.py  ocr_block.py  page.py  page_analysis.py  term_knowledge.py
src/mini_ocr/schemas/: document.py  extraction.py
src/mini_ocr/services/: agents.py  correction_service.py  document_registry.py  document_status.py  extraction_stage.py  extraction_validator.py  hash_utils.py  image_preprocessor.py  langgraph_workflow.py  observability.py  ocr_stage.py  page_store.py  pdf_renderer.py  pipeline.py  pipeline_context.py  processing_orchestrator.py  rag_store.py  render_stage.py  section_detector.py  validation_models.py  validation_policies.py  validation_service.py
src/mini_ocr/services/agents/: __init__.py  correction.py  (+2 more)
src/mini_ocr/utils/: json_utils.py  text.py
tests/: test_correction_refactor.py  test_extraction_validator.py  test_json_utils.py  test_langgraph_workflow_refactor.py  test_pipeline_orchestration.py  test_section_detector_strategy.py  test_text_policies.py  test_text_utils.py  test_validation_service_refactor.py  test_validation_strategy.py
(+7 files in other folders)
