[project]
name = "mini-ocr"
version = "0.1.0"
description = ""
authors = [
    {name = "bolt.hold7507@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn[standard] (>=0.47.0,<0.48.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "python-multipart (>=0.0.29,<0.0.30)",
    "typer (>=0.25.1,<0.26.0)",
    "pymupdf (>=1.27.2.3,<2.0.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "opencv-python-headless (>=4.13.0.92,<5.0.0.0)",
    "numpy (>=1.26,<2.4)",
    "rapidfuzz (>=3.14.5,<4.0.0)",
    "openai (>=2.38.0,<3.0.0)",
    "paddleocr (>=3.5.0,<4.0.0)",
    "paddlepaddle (==3.2.2)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
